# remote-prompter

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml  semantic-release.yml
design/: ui.fig
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  ws.rs
src-tauri/icons/: icon.icns
src-tauri/src/: comfy.rs  main.rs  traits.rs
src/fns/ai/comfy/: createPromptRequest.js  invokePrompt.js
src/fns/b64/: arrayBufferToBase64.js  base64ToArrayBuffer.js
src/fns/integrations/: index.js  index.ts  types.ts
src/fns/integrations/automatic1111/: identifyByIpAddress.js  identifyByIpAddress.ts  img2img.js  index.ts  invokePrompt.js  state.ts
src/fns/integrations/comfy/: createPromptRequest.js  createPromptRequest.ts  createPromptRequestDepthHed.ts  createPromptRequestDepthHedLora.ts  createPromptRequestSimple.ts  identifyByIpAddress.js  identifyByIpAddress.ts  index.js  index.ts  invokePrompt.js  invokePrompt.ts
src/lib/: ImageClipboard.svelte  ImageDragDrop.svelte  ImagePreview.svelte  IpConnector.svelte  PromptForm.svelte
