[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard-all", "shell-open", "window-set-always-on-top"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-clipboard = "0.2.5"
base64 = "0.13.0"
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
tungstenite = "0.12.0"
url = "2.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
